--- a/pages/reveal/envelope/index.scss
+++ b/pages/reveal/envelope/index.scss
@@ -3,15 +3,22 @@
 $dark: #317bd9;
 $light: #1aa1d2;
 
+$time: 8s;
+
 #envelope-container {
   height: 100vh;
   width: 100vw;
   background: #ffffff;
   .envelope-parent {
-    width: auto;
+    width: 300px;
     height: auto;
+    overflow: hidden;
     .envelope-back {
+      position: relative;
+      height: 350px;
       .background {
+        position: absolute;
+        bottom: 0;
         width: 300px;
         height: 200px;
         background: $dark;
@@ -19,22 +26,29 @@ $light: #1aa1d2;
         border-bottom-right-radius: 10%;
       }
       .cover {
+        position: absolute;
         width: 250px;
         height: 150px;
         background: transparent;
-        border-bottom: 150px solid $light;
+        border-bottom: 150px solid $dark;
         border-left: 150px solid transparent;
         border-right: 150px solid transparent;
+        transform-style: preserve-3d;
+        transform-origin: bottom;
+        animation-fill-mode: initial;
+        animation: openCover $time infinite;
       }
     }
     .card {
       position: absolute;
-      bottom: 50px;
+      bottom: -80px;
       left: 25px;
       width: 250px;
       height: 250px;
       background: #f5f5f5;
       border: 1px solid #f5f5f5;
+      animation-fill-mode: initial;
+      animation: openReport $time infinite;
 
       .add-button {
         top: -15px;
@@ -46,11 +60,11 @@ $light: #1aa1d2;
         border-radius: 50%;
         font-size: 32px;
         color: white;
-        div{
-            width: 20px;
-            height: 20px;
-            margin-top: -7px;
-            margin-left: 10px;
+        div {
+          width: 20px;
+          height: 20px;
+          margin-top: -17%;
+          margin-left: 25%;
         }
       }
 
@@ -104,14 +118,58 @@ $light: #1aa1d2;
     width: 270px;
     height: 15px;
     margin-top: 30px;
-    background: #F2F2F2;
+    background: #f2f2f2;
     border-radius: 50%;
   }
-  
+
   .courtesy {
     left: 0;
     bottom: 0;
     font-size: 1rem;
     color: black;
+  }
+
+  @keyframes openReport {
+    0% {
+      bottom: -80px;
+    }
+    15% {
+      bottom: -80px;
+    }
+    30% {
+      bottom: 50px;
+    }
+    70% {
+      bottom: 50px;
+    }
+    80% {
+      bottom: -80px;
+    }
+    100% {
+      bottom: -80px;
+    }
+  }
+
+  @keyframes openCover {
+    0% {
+      transform: rotateX(180deg);
+      z-index: 100;
+    }
+    15% {
+      transform: rotateX(0deg);
+      z-index: unset;
+    }
+    75% {
+      transform: rotateX(0deg);
+      z-index: unset;
+    }
+    85% {
+      transform: rotateX(180deg);
+      z-index: 100;
+    }
+    100% {
+      transform: rotateX(180deg);
+      z-index: 100;
+    }
   }
 }
