--- a/pages/reveal/linear-reveal/index.scss
+++ b/pages/reveal/linear-reveal/index.scss
@@ -1,4 +1,4 @@
-@import "../index.scss";
+@import "../../index.scss";
 
 .linear-reveal-container {
   background-color: black;
@@ -18,7 +18,7 @@
     font-size: 3rem;
 
     animation-timing-function: ease-out;
-    animation-delay: 1s;
+    animation-delay: 3s;
     animation: fadeIn 4s;
 
     @include media-breakpoint-up(md) {
@@ -30,7 +30,7 @@
       overflow: hidden;
       .reveal-text {
         animation: text-color 0s;
-        animation-delay: 3.5s;
+        animation-delay: 6.5s;
         animation-fill-mode: both;
       }
       .reveal-box {
@@ -45,7 +45,7 @@
         background-color: #ecb22e;
         
         animation: text-revealer 1s;
-        animation-delay: 3s;
+        animation-delay: 6s;
         animation-fill-mode: both;
       }
     }
