--- a/pages/reveal/dribbble-logo/index.scss
+++ b/pages/reveal/dribbble-logo/index.scss
@@ -3,13 +3,13 @@
 
 $time: 11s;
 
-#envelope-container {
+#dribbble-logo-reveal-container {
   height: 100vh;
   width: 100vw;
   background: #d21240;
   overflow: hidden;
 
-  .envelope-parent {
+  .dribbble-logo-reveal-parent {
     position: absolute;
     top: 40%;
     left: 50%;
