CSS Avengers | Implementation

--- a/pages/illustration/towel/index.scss
+++ b/pages/illustration/towel/index.scss
@@ -54,7 +54,14 @@
         height: 100%;
         background: #fb982e;
         border-top-left-radius: 12px;
-        
+      }
+      .oval-1 {
+        position: absolute;
+        width: 40%;
+        height: 40px;
+        background: white;
+        border-radius: 50%;
+        top: -35px;
       }
       .last {
         position: absolute;
@@ -63,6 +70,24 @@
         height: 100%;
         background: #fb982e;
         border-top-right-radius: 12px;
+      }
+      .oval-2 {
+        position: absolute;
+        width: 40%;
+        height: 40px;
+        right: 0;
+        background: white;
+        border-radius: 50%;
+        top: -36px;
+      }
+      .oval-3 {
+        position: absolute;
+        width: 50%;
+        height: 40px;
+        left: 30%;
+        background: white;
+        border-radius: 50%;
+        top: -50px;
       }
       .middle {
         position: absolute;
@@ -82,7 +107,7 @@
         position: absolute;
         left: 30%;
         bottom: 0;
-        background: linear-gradient(225deg, #C14927 50%, #fb982e 50%);
+        background: linear-gradient(225deg, #c14927 50%, #fb982e 50%);
       }
 
       .shawdow-2 {
@@ -91,8 +116,7 @@
         position: absolute;
         right: 20%;
         bottom: 0;
-        background: linear-gradient(135deg, #C14927 50%, #fb982e 50%);
-
+        background: linear-gradient(135deg, #c14927 50%, #fb982e 50%);
       }
 
       .bar {
