--- a/pages/index.scss
+++ b/pages/index.scss
@@ -6,6 +6,10 @@
 
 .courtesy {
   left: 0;
-    bottom: 0;
-    font-size: 1rem;
+  bottom: 0;
+  font-size: 1rem;
+}
+
+.card-body {
+  padding: 0.8rem;
 }
